# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

[project]
name = "PyBarePlot"
version = "0.0.3"
dependencies = []
authors = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
maintainers = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
description = 'SVG chart generator CLI and Python module for creating visual charts with support for styling, legends, gradients, and layout customization.'
readme = {file = "README.md", content-type = "text/markdown"}
# url = "https://github.com/mauricelambert/PyBarePlot"
# download-url = "https://mauricelambert.github.io/info/python/code/PyBarePlot.pyz"
classifiers = [
    "Topic :: System",
    "Topic :: Security",
    "Environment :: Console",
    "Topic :: System :: Shells",
    'Operating System :: POSIX',
    "Natural Language :: English",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: System :: System Shells",
    'Operating System :: MacOS :: MacOS X',
    "Programming Language :: Python :: 3.8",
    'Operating System :: Microsoft :: Windows',
    "Topic :: System :: Systems Administration",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
keywords = ['svg', 'charts', 'plotting', 'visualization', 'cli', 'graphs', 'data visualization']
license = {text = "GPL-3.0 License"}
requires-python = ">=3.8"

[project.scripts]
PyBarePlot = "PyBarePlot:main"

[project.urls]
"Github" = "https://github.com/mauricelambert/PyBarePlot"
"Documentation" = "https://mauricelambert.github.io/info/python/code/PyBarePlot.html"
"Python Executable" = "https://mauricelambert.github.io/info/python/code/PyBarePlot.pyz"
"Windows Executable" = "https://mauricelambert.github.io/info/python/code/PyBarePlot.exe"

[tool.setuptools]
include-package-data = true
platforms = ['Windows', 'Linux', "MacOS"]
py-modules = ['PyBarePlot']
packages = []
script-files = []

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
